--- a/index.html
+++ b/index.html
@@ -108,9 +108,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="topsecret.html">Stormy's Website</a>
-                <p class="navbar-text"> <span class="badge">Beta</span>
-                </p>
+                <a class="navbar-brand" href="topsecret.html">Stormy's Website <p class="navbar-text"> <span class="badge">Beta</span>
+                </p></a>
 
 
             </div>
