--- a/topsecret.html
+++ b/topsecret.html
@@ -10,16 +10,25 @@
     <a href="index.html">
         <img src="img/garywashere.jpg" />
     </a>
-
+    <audio autoplay loop preload="auto">
+        <source src="sound/interiorcrocodilealligator.mp3" type="audio/mpeg">
+    </audio>
 </center>
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-31660701-1', 'stormyjet.com');
-  ga('send', 'pageview');
-
+    ga('create', 'UA-31660701-1', 'stormyjet.com');
+    ga('send', 'pageview');
 </script>
+
 </html>
