--- a/meteor/mobile.html
+++ b/meteor/mobile.html
@@ -81,7 +81,10 @@
 <!-- /container -->
 </body>
 <!--Core JS and CSS stuff. Placed at the bottom because I can put it there-->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<script src="../core/js/jquery-1.7.2.min.js">
+    < \/script
+<script src="/ / ajax.googleapis.com / ajax / libs / jquery / 1.8.2 / jquery.min.js ">
+</script>
 <script>
     window.jQuery || document.write('<script src="core/js/vendor/jquery-1.8.2.min.js"><\/script>')
 </script>
