--- a/random/YourMom.html
+++ b/random/YourMom.html
@@ -1,5 +1,6 @@
 <title>Your Mom Joke Gen</title>
 <script src="js/yourmom.js"></script>
+<script src="js/yourmompart2.js"></script>
 <!-- Bootstrap core CSS -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -24,15 +25,15 @@
                 </div>
 
                 <p class="notfound">
-                    Your mom is so
-                    <div id="first" style="font-size: 500%;text-align: center;word-wrap: break-word;color:black">loading...</div>
-                    <p class="notfound">
-                        that she
-                        <div id="second" style="font-size: 500%;text-align: center;word-wrap: break-word;color:black">loading...</div>
-                        <br>
-                        <button type="button" class="btn btn-lg">
-                            <a style="color:black;float:right;" href="YourMom.html">Another!</a>
-                        </button>
+                    Your mom is so</p>
+                <div id="first" style="font-size: 500%;text-align: center;word-wrap: break-word;color:black">loading...</div>
+                <p class="notfound">
+                    that she</p>
+                <div id="second" style="font-size: 500%;text-align: center;word-wrap: break-word;color:black">loading...</div>
+                <br>
+                <button type="button" class="btn btn-lg">
+                    <a style="color:black;float:right;" href="YourMom.html">Another!</a>
+                </button>
 
 
 
