--- a/nostalgia/index-Dropbox.html
+++ b/nostalgia/index-Dropbox.html
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="topsecret.html">Nostalgia
+                <a class="navbar-brand" href="nostalgia/">Nostalgia
                 </a>
 
 
@@ -78,7 +78,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
 
-                    <li class="bg-success"><a href="nostalgia/">Main Site</a>
+                    <li class="bg-success"><a href="http://stormyjet.com">Main Site</a>
                     </li>
                 </ul>
             </div>
