--- a/nostalgia/index.html
+++ b/nostalgia/index.html
@@ -47,7 +47,7 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="topsecret.html">Nostalgia
+                            <a class="navbar-brand" href="http://stormyjet.com">Nostalgia
                 </a>
 
 
@@ -81,7 +81,7 @@
                             </ul>
                             <ul class="nav navbar-nav navbar-right">
 
-                                <li class="bg-success"><a href="nostalgia/">Main Site</a>
+                                <li class="bg-success"><a href="http://stormyjet.com">Main Site</a>
                                 </li>
                             </ul>
                         </div>
@@ -105,7 +105,7 @@
                     <h3>
                         Welcome to Nostalgia.</h3>
                     <br>
-                    <h4>Here is where we have backups of older versions of this website</h4>
+                    <h4>Here is where we have backups of older versions of this website</h4><small>and possibly more soon!</small>
                     <br>
                     <small> Be warned, things may not work, or be completley broken!</small>
                     <p class="lead"><a href="index-Dropbox.html">Click here for the homepage in the dropbox days</a>
